# nexus_neural_dao

./: .gitignore  README.md  docker_compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/config/: settings.py
app/data/: knowledge_base.json
app/models/: finance_models.py  response_models.py
app/services/: excel_service.py  finance_service.py  llm_service.py
app/static/: index.html  script.js
app/static/scripts/: app.js  app.js.bak
app/static/styles/: ibm.css  style.css
app/tests/: test_api.py  test_services.py
app/utils/: formula_engine.py  knowledge_base.py
frontend/: index.html
frontend/scripts/: app.js
