[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-finance"
version = "1.0.0"
description = "AI-powered financial modeling and forecasting"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.10.1",
    "openai==1.3.0",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "python-multipart",
    "google-generativeai"
]

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "Darwin"
executionEnvironments = [
    {
        root = ".",
        pythonVersion = "3.9",
        pythonPlatform = "Darwin",
        extraPaths = ["./venv/lib/python3.9/site-packages"]
    }
]
